# inverse-kin-GL

./: .gitignore  CMakeLists.txt  README.md  ]  conanfile.txt  main.cc
include/: ik.h  shader.h
include/glad/: glad.h
res/shaders/: base.frag  base.vert  ik.frag  ik.vert  lines.frag  lines.vert  noise.frag
src/: CMakeLists.txt  glad.c  ik.cc  main.cc  shader.cc
